--- a/test/index.html
+++ b/test/index.html
@@ -9,16 +9,14 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="qunit.js"></script>
-  <script src="../vendor/loader.js"></script>
-  <script src="../vendor/handlebars.amd.js"></script>
-  <script src="../vendor/simple-html-tokenizer.amd.js"></script>
-  <script src="../tmp/htmlbars.amd.js"></script>
-  <script src="../tmp/tests.amd.js"></script>
+  <script src="vendor/loader.js"></script>
+  <script src="vendor/handlebars.amd.js"></script>
+  <script src="vendor/simple-html-tokenizer.amd.js"></script>
+  <script src="htmlbars-and-tests.amd.js"></script>
   <script type="text/javascript">
-
-  for (var key in requireModule.registry) {
-    if (/^tests\//.test(key)) requireModule(key);
-  }
+    for (var key in requireModule.registry) {
+      if (/^htmlbars\/tests\//.test(key)) requireModule(key);
+    }
   </script>
 </body>
 </html>
